--- a/ex02/Makefile
+++ b/ex02/Makefile
@@ -1,18 +1,18 @@
-NAME = ex00
+NAME = Fragtrap
 CC = c++
 CFLAGS = -Wall -Wextra -Werror -std=c++98 -O3
 
 RM = rm -rf
 
-SRCS = main.cpp ClapTrap.cpp
+SRCS = main.cpp ClapTrap.cpp FragTrap.cpp ScavTrap.cpp
 OBJS = $(SRCS:.cpp=.o)
 
 all: $(NAME)
 
 $(NAME): $(OBJS)
-	@echo "\033[0;33m\nCOMPILING ex00...\n"
+	@echo "\033[0;33m\nCOMPILING Fragtrap...\n"
 	$(CC) $(CFLAGS) $(OBJS) -o $(NAME)
-	@echo "\033[1;32m./ex00 created\n"
+	@echo "\033[1;32m./Fragtrap created\n"
 
 %.o: %.cpp
 	@$(CC) $(CFLAGS) -c $< -o $@
@@ -21,6 +21,6 @@ clean:
 	$(RM) $(OBJS)
 
 fclean: clean
-	$(RM) $(NAME)
+	$(RM) $(NAME) Fragtrap
 
 re: fclean all
